Amazon-EKS-Deployment/7_App_Deployment/Portfolio/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
spec:
  selector:
    app: portfolio
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: swilliamx/sl-portfolio-soon:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
