Amazon-EKS-Deployment/7_App_Deployment/Portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  namespace: portfolio
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: portfolio.solvweb.net
    http:
      paths:
      - backend:
          service:
            name: portfolio
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - portfolio.solvweb.net
    secretName: portfolio-tls-certificate
